After CMF-1.5.1beta

  New Features

    - DCWorkflow: To bridge some of the bound variable name differences
      between TALES expressions used in DCWorkflow and those used elsewhere
      in the CMF, added two "aliases" to the expression context that reflect
      the CMF conventions: "object" points to "here", and "folder" points
      to "container" (http://www.zope.org/Collectors/CMF/338)

    - CMFSetup: Improved update directives for extension profiles.
      See the new PROFILES.txt for details.

    - CMFCore.DirectoryView: Made list of file names to ignore configurable.
      The previously hardcoded list of files to ignore when creating their
      ZODB representations can now be configured by passing a sequence of
      names to registerDirectory, which will be ignored in addition to the
      standard list of ignored names (http://www.zope.org/Collectors/CMF/319).

    - CMFCalendar: Added extension profile.
      You can now set up CMFCalendar in one step together with a new site or
      add calendar support to an existing site using the portal_setup tool.

    - CMFSetup: Added support for extension profiles.
      Extension profiles are profile fragments used to modify base profiles.
      They can be shipped with add-on products or used for customization
      steps. Importing an extension profile adds or overwrites existing
      settings in a fine-grained way. You can't export extension profiles.
      Snapshots and exports always represent the merged settings.

    - CMFSetup: Sometimes it is not necessary or desirable to create a 
      snapshot upon initial site creation. Matter of fact when run in a unit 
      test situation, addConfiguredSite can throw permission errors during the
      snapshot-taking because no specific SecurityManager has been set up.
      Add new flag "snapshot" to factory.addConfiguredSite to turn off
      snapshotting if desired

  Bug Fixes

    - TypesTool: Removed _checkViewType.