@@ -2,6 +2,10 @@ After CMF-1.5.1beta
 
   New Features
 
+    - MemberDataTool: setSecurityProfile (called by MembershipTool's
+      setPassword) now uses the userFolderEditUser() API of the user
+      folder to change user information.
+
     - DCWorkflow: To bridge some of the bound variable name differences
       between TALES expressions used in DCWorkflow and those used elsewhere
       in the CMF, added two "aliases" to the expression context that reflect
